[gd_scene load_steps=19 format=3 uid="uid://bb87h4iblio7e"]

[ext_resource type="Script" uid="uid://ku12f32d4f3k" path="res://actors/scripts/shop_zone.gd" id="1_tlytx"]
[ext_resource type="ArrayMesh" uid="uid://dvaiti0k2yo4a" path="res://Assets/Shop_Cube_006.res" id="2_toxax"]
[ext_resource type="Texture2D" uid="uid://bqgp4mys5etv8" path="res://Assets/Icons/Eicon.png" id="3_e1x1e"]
[ext_resource type="PackedScene" uid="uid://b4qabwbwp2g23" path="res://actors/scenes/item_dispenser.tscn" id="4_cp3rh"]
[ext_resource type="PackedScene" uid="uid://d1rags3ln5ga8" path="res://actors/mechanisms/handle.tscn" id="5_jm7ee"]
[ext_resource type="Script" uid="uid://banct1fm1y4u0" path="res://scripts/components/decelerator_component.gd" id="6_viby6"]
[ext_resource type="PackedScene" uid="uid://7k7ri26qwqvt" path="res://effects/rcs_thruster_effect.tscn" id="7_5o1uo"]
[ext_resource type="AudioStream" uid="uid://cjkmlgrt2f54u" path="res://sounds/rcs-thrusters/rcs-thruster-loop-non-muffled.ogg" id="8_dcf32"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uden6"]
size = Vector3(7.93945, 1, 7.88184)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7rbfe"]
transparency = 1
albedo_texture = ExtResource("3_e1x1e")
emission_enabled = true
emission_texture = ExtResource("3_e1x1e")

[sub_resource type="PlaneMesh" id="PlaneMesh_7who5"]
material = SubResource("StandardMaterial3D_7rbfe")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e1x1e"]
radius = 0.811365
height = 6.78798

[sub_resource type="BoxShape3D" id="BoxShape3D_7rbfe"]
resource_local_to_scene = true
size = Vector3(10.6038, 6.91626, 10.7306)

[sub_resource type="BoxShape3D" id="BoxShape3D_7who5"]
resource_local_to_scene = true
size = Vector3(1.08976, 6.91626, 8.7915)

[sub_resource type="BoxShape3D" id="BoxShape3D_l0b5e"]
size = Vector3(18.856, 8.27155, 4.65637)

[sub_resource type="Gradient" id="Gradient_nr8wr"]
offsets = PackedFloat32Array(0.576419, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_biq26"]
gradient = SubResource("Gradient_nr8wr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dcf32"]
particle_flag_rotate_y = true
emission_shape = 1
emission_sphere_radius = 0.2
angle_min = 1.07288e-05
angle_max = 720.0
direction = Vector3(0, 0, 1)
spread = 2.5
initial_velocity_min = 10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_biq26")

[node name="ShopZone" type="RigidBody3D" node_paths=PackedStringArray("item_dispenser")]
collision_layer = 65
collision_mask = 85
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 25000.0
script = ExtResource("1_tlytx")
item_dispenser = NodePath("ItemDispenser")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_uden6")

[node name="ShopMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.58, 0, 0, 0, 0.58, 0, 0, 0, 0.58, -0.0790353, 0.0428529, -2.74969)
layers = 2
mesh = ExtResource("2_toxax")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.60886, 0.234585)
light_color = Color(0.668957, 0.896188, 3.85046e-07, 1)
light_energy = 9.762
light_volumetric_fog_energy = 0.0
light_specular = 0.0
omni_range = 6.20894

[node name="MeshInstance3D" type="MeshInstance3D" parent="OmniLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.168901, -4.11428, 0)
mesh = SubResource("PlaneMesh_7who5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.58, 0, 0, 0, 0.58, 0, 0, 0, 0.58, -5.3224382, 0.0428529, 1.1180282)
shape = SubResource("CapsuleShape3D_e1x1e")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(0.58, 0, 0, 0, 0.58, 0, 0, 0, 0.58, 7.983892, 0.82316166, -1.9871699)
shape = SubResource("BoxShape3D_7rbfe")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(0.58, 0, 0, 0, 0.58, 0, 0, 0, 0.58, -5.1364727, 0.82316166, -1.4118794)
shape = SubResource("BoxShape3D_7who5")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(0.58, 0, 0, 0, 0.58, 0, 0, 0, 0.58, -0.4109339, 0.99616987, -4.2748)
shape = SubResource("BoxShape3D_l0b5e")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(0.58, 0, 0, 0, 0.58, 0, 0, 0, 0.58, 5.2734656, 0.0428529, 0.7134726)
shape = SubResource("CapsuleShape3D_e1x1e")

[node name="ItemDispenser" parent="." instance=ExtResource("4_cp3rh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.0217285, -1.5332873, 3.6314254)

[node name="Handle" parent="." node_paths=PackedStringArray("attached_body") instance=ExtResource("5_jm7ee")]
transform = Transform3D(1.9106855e-15, -1, 4.371139e-08, -4.371139e-08, -4.371139e-08, -1, 1, 0, -4.371139e-08, -3.6643522, -1.8117318, -3.9706852)
mass = 25000.0
attached_body = NodePath("..")
starting_angle = 0.0
target_angle = -1.5707963267948966
duration_randomization = 0.2

[node name="Handle2" parent="." node_paths=PackedStringArray("attached_body") instance=ExtResource("5_jm7ee")]
transform = Transform3D(-1, 4.371139e-08, 4.3711385e-08, -4.371139e-08, -4.371139e-08, -1, -4.3711385e-08, -1, 4.3711392e-08, 0.9949496, -1.6697135, -4.105047)
mass = 25000.0
attached_body = NodePath("..")
starting_angle = 0.0
target_angle = -1.5707963267948966
duration_randomization = 0.2

[node name="Handle3" parent="." node_paths=PackedStringArray("attached_body") instance=ExtResource("5_jm7ee")]
transform = Transform3D(8.742278e-08, 1, -4.3711395e-08, -4.371139e-08, -4.371139e-08, -1, -1, 8.742278e-08, 4.371138e-08, 8.26835, -1.6671348, -2.298031)
mass = 25000.0
attached_body = NodePath("..")
starting_angle = 0.0
target_angle = -1.5707963267948966
duration_randomization = 0.2

[node name="DeceleratorComponent" type="Node" parent="." node_paths=PackedStringArray("deceleration_sounds", "deceleration_effects")]
script = ExtResource("6_viby6")
deceleration_sounds = [NodePath("../DecelerationEffects/RCSThrustLoop"), NodePath("../DecelerationEffects/RCSThrustLoop2")]
deceleration_effects = [NodePath("../DecelerationEffects/RCSThrusterEffect"), NodePath("../DecelerationEffects/RCSThrusterEffect5"), NodePath("../DecelerationEffects/RCSThrusterEffect6"), NodePath("../DecelerationEffects/RCSThrusterEffect2"), NodePath("../DecelerationEffects/RCSThrusterEffect3"), NodePath("../DecelerationEffects/RCSThrusterEffect4")]
metadata/_custom_type_script = "uid://banct1fm1y4u0"

[node name="DecelerationEffects" type="Node3D" parent="."]

[node name="RCSThrusterEffect" parent="DecelerationEffects" instance=ExtResource("7_5o1uo")]
transform = Transform3D(0.70710677, 0, -0.70710677, 0, 1, 0, 0.70710677, 0, 0.70710677, -5.4021564, -1.465096, 1.4330466)
emitting = true
amount = 240
lifetime = 0.15000000000000002
process_material = SubResource("ParticleProcessMaterial_dcf32")

[node name="RCSThrusterEffect5" parent="DecelerationEffects" instance=ExtResource("7_5o1uo")]
transform = Transform3D(-4.3711385e-08, 0, -0.99999994, 0, 1, 0, 0.99999994, 0, -4.3711385e-08, -5.8604217, -1.465096, -2.0039485)
emitting = true
amount = 240
lifetime = 0.15000000000000002
process_material = SubResource("ParticleProcessMaterial_dcf32")

[node name="RCSThrusterEffect6" parent="DecelerationEffects" instance=ExtResource("7_5o1uo")]
transform = Transform3D(-4.3711385e-08, 0, 0.99999994, 0, 1, 0, -0.99999994, 0, -4.3711385e-08, 11.012102, -1.465096, -2.0039485)
emitting = true
amount = 240
lifetime = 0.15000000000000002
process_material = SubResource("ParticleProcessMaterial_dcf32")

[node name="RCSThrusterEffect2" parent="DecelerationEffects" instance=ExtResource("7_5o1uo")]
transform = Transform3D(-0.7071067, 0, -0.7071067, 0, 1, 0, 0.7071067, 0, -0.7071067, -5.756574, -1.465096, -5.366536)
emitting = true
amount = 240
lifetime = 0.15000000000000002
process_material = SubResource("ParticleProcessMaterial_dcf32")

[node name="RCSThrusterEffect3" parent="DecelerationEffects" instance=ExtResource("7_5o1uo")]
transform = Transform3D(-0.70710677, 0, 0.70710665, 0, 1, 0, -0.70710665, 0, -0.70710677, 9.339024, -1.465096, -5.484676)
emitting = true
amount = 240
lifetime = 0.15000000000000002
process_material = SubResource("ParticleProcessMaterial_dcf32")

[node name="RCSThrusterEffect4" parent="DecelerationEffects" instance=ExtResource("7_5o1uo")]
transform = Transform3D(0.7071067, 0, 0.7071067, 0, 1, 0, -0.7071067, 0, 0.7071067, 9.365276, -1.465096, 1.0655003)
emitting = true
amount = 240
lifetime = 0.15000000000000002
process_material = SubResource("ParticleProcessMaterial_dcf32")

[node name="RCSThrustLoop" type="AudioStreamPlayer3D" parent="DecelerationEffects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5828066, 0, -1.895556)
stream = ExtResource("8_dcf32")
volume_db = -7.0
unit_size = 7.0
max_db = -2.0
pitch_scale = 0.65

[node name="RCSThrustLoop2" type="AudioStreamPlayer3D" parent="DecelerationEffects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.290452, 0, -2.2080104)
stream = ExtResource("8_dcf32")
volume_db = -7.0
unit_size = 7.0
max_db = -2.0
pitch_scale = 0.65

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
